syntax = "proto3";

package auth;

option go_package = "crypto_analyzer-api_gateway/gen/go/auth;authpb";

message RegisterRequest {
  string username = 1;
  string email = 2;
  string password = 3;
}

message RegisterResponse {
  string token = 1;
  string refresh_token = 2;
}

message LoginRequest {
  string email = 1;
  string username = 2;
  string password = 3;
}

message LoginResponse {
  string token = 1;
  string refresh_token = 2;
}

message RefreshRequest {
  string refresh_token = 1;
}

message RefreshResponse {
  string token = 1;
  string refresh_token = 2;
}

message VerifyRequest {}

message VerifyResponse {
  string user_id = 1;
  string email = 2;
  string username = 3;
}

message LogoutRequest {
  string refresh_token = 1;
}

message LogoutResponse {}

service AuthService {
  rpc Register(RegisterRequest) returns (RegisterResponse);
  rpc Login(LoginRequest) returns (LoginResponse);
  rpc Refresh(RefreshRequest) returns (RefreshResponse);
  rpc Verify(VerifyRequest) returns (VerifyResponse);
  rpc Logout(LogoutRequest) returns (LogoutResponse);
}